[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/ConfirmDialog/ConfirmDialog.gd" type="Script" id=1]
[ext_resource path="res://RESOURCES/Font/BMYEONSUNG.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://RESOURCES/GuiImages/DivisionLine.png" type="Texture" id=3]
[ext_resource path="res://RESOURCES/GuiImages/ParchmentSmall.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.317647, 0.317647, 0.317647, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 2 )

[node name="ConfirmDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackgroundDim" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.690196 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureButton" type="TextureButton" parent="BackgroundDim"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 700.0
margin_right = -100.0
margin_bottom = -800.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Question" type="Label" parent="Panel/VBoxContainer"]
margin_right = 840.0
margin_bottom = 188.0
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Are you sure you want to refund your skill points?"
align = 1
valign = 1
autowrap = true

[node name="Line" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 192.0
margin_right = 840.0
margin_bottom = 207.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Line"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Line"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Line"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 211.0
margin_right = 840.0
margin_bottom = 361.0
rect_min_size = Vector2( 0, 150 )

[node name="Confirm" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 418.0
margin_bottom = 150.0
size_flags_horizontal = 3
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Confirm"
align = 1
valign = 1

[node name="Cancel" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 422.0
margin_right = 840.0
margin_bottom = 150.0
size_flags_horizontal = 3
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/Cancel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Cancel"
align = 1
valign = 1

[node name="Line2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 365.0
margin_right = 840.0
margin_bottom = 380.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Line2"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Line2"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Line2"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[connection signal="pressed" from="BackgroundDim/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
